--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,16 @@ before_install:
   - docker build -t beautiful_elion/docker-react -f Dockerfile.dev .
 
 script:
- - docker run -e CI=true beautiful_elion/docker-react npm run test
+  - docker run -e CI=true beautiful_elion/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-north-1"
+  app: "Docker-react"
+  env: "Docker-react-env"
+  bucket_name: "elasticbeanstalk-eu-north-1-076750411957"
+  bucket_path: "Docker-react"
+  on:
+   branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: "$AWS_SECRET_KEY"
